[gd_scene load_steps=3 format=3 uid="uid://dvjlkpjvjxn0h"]

[ext_resource type="Script" path="res://MicRecord.gd" id="1"]

[sub_resource type="AudioStreamMicrophone" id="1"]

[node name="MicRecord" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -278.0
offset_top = -224.0
offset_right = 296.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource("1")
autoplay = true
bus = &"Record"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
volume_db = -6.0

[node name="Status" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
text = "Status: "
horizontal_alignment = 1

[node name="RecordButton" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 77.0
offset_right = 159.0
offset_bottom = 117.0
text = "Запись"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 209.0
offset_top = 77.0
offset_right = 339.0
offset_bottom = 117.0
disabled = true
text = "Воспроизвести
"

[node name="FormatLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 33.0
offset_top = 153.0
offset_right = 102.0
offset_bottom = 179.0
text = "Format:"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 131.0
offset_right = 162.0
offset_bottom = 171.0
disabled = true
text = "Сохранить"

[node name="Filename" type="LineEdit" parent="SaveButton"]
layout_mode = 0
offset_left = 180.0
offset_right = 507.0
offset_bottom = 40.0
text = "user://record.wav"
caret_blink = true

[node name="OpenUserFolderButton" type="Button" parent="."]
layout_mode = 1
offset_left = 549.0
offset_top = 130.0
offset_right = 712.0
offset_bottom = 170.0
text = "Открыть
"

[connection signal="pressed" from="RecordButton" to="." method="_on_record_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="OpenUserFolderButton" to="." method="_on_open_user_folder_button_pressed"]
